--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,3 +1,29 @@
 {
-    "Made with": "Сделано в"
+    "Made with": "Сделано в",
+    "sorting": "Сортировка",
+    "price": "Цена",
+    "choose": "ВЫБЕРИТЕ",
+    "add to basket": "Добавить в корзину",
+    "related products": "Похожие товары",
+    "in stock": "В наличии",
+    "search": "Поиск",
+    "from": "От",
+    "to": "До",
+    "newest": "Самые новые",
+    "expensive": "Дороже",
+    "cheaper": "Дешевле",
+    "a-z": "Алфавит [а-я]",
+    "z-a": "Алфавит [я-а]",
+    "basket": "КОРЗИНА",
+    "pay": "Оплатить",
+    "email": "Почта",
+    "name": "Имя",
+    "address": "Адрес Доставки",
+    "total": "Итог",
+    "order sum": "Сумма заказа",
+    "delivery": "Доставка",
+    "all total": "Всего",
+    "new order": "НОВЫЙ ЗАКАЗ",
+    "make order": "Оформить заказ",
+    "phone": "Номер Телефона"
 }
