--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -25,5 +25,6 @@
     "all total": "Всего",
     "new order": "НОВЫЙ ЗАКАЗ",
     "make order": "Оформить заказ",
-    "phone": "Номер Телефона"
+    "phone": "Номер Телефона",
+    "buy": "Купить"
 }
