--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -25,5 +25,6 @@
     "all total": "Total",
     "new order": "New order",
     "make order": "Make an order",
-    "phone": "Phone number"
+    "phone": "Phone number",
+    "buy": "Buy"
 }
