--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -26,5 +26,10 @@
     "new order": "New order",
     "make order": "Make an order",
     "phone": "Phone number",
-    "buy": "Buy"
+    "buy": "Buy",
+    "more": "More",
+    "loading": "Loading",
+    "discount": "Discount",
+    "reviews": "Reviews",
+    "published": "Published"
 }
