--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -26,5 +26,10 @@
     "new order": "НОВЫЙ ЗАКАЗ",
     "make order": "Оформить заказ",
     "phone": "Номер Телефона",
-    "buy": "Купить"
+    "buy": "Купить",
+    "more": "Еще",
+    "loading": "Загрузка",
+    "discount": "Скидка",
+    "reviews": "Отзывы",
+    "published": "Опубликовано"
 }
