--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -31,5 +31,9 @@
     "loading": "Загрузка",
     "discount": "Скидка",
     "reviews": "Отзывы",
-    "published": "Опубликовано"
+    "published": "Опубликовано",
+    "content": "контент",
+    "ok": "Ок",
+    "close_tab": "Закрыть сайт",
+    "adult_text": "Внимание! Данный сайт содержит контент с возрастным рейтингом 18+. Если Вам меньше 18 лет, просим незамедлительно покинуть сайт"
 }
