--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,6 +4,7 @@
     "price": "Price",
     "choose": "Choose",
     "add to basket": "Add to basket",
+    "go to basket": "Go to the basket",
     "related products": "Related products",
     "in stock": "In stock",
     "search": "Search",
@@ -20,6 +21,8 @@
     "name": "Name",
     "address": "Delivery address",
     "total": "Total",
+    "success-pay": "Payment was successful",
+    "back to main": "Back to the main page",
     "order sum": "Order sum",
     "delivery": "Delivery",
     "all total": "Total",
