--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,6 +4,7 @@
     "price": "Цена",
     "choose": "ВЫБЕРИТЕ",
     "add to basket": "Добавить в корзину",
+    "go to basket": "Перейти в корзину",
     "related products": "Похожие товары",
     "in stock": "В наличии",
     "search": "Поиск",
@@ -20,6 +21,8 @@
     "name": "Имя",
     "address": "Адрес Доставки",
     "total": "Итог",
+    "success-pay": "Оплата прошла успешно",
+    "back to main": "Вернуться на главную",
     "order sum": "Сумма заказа",
     "delivery": "Доставка",
     "all total": "Всего",
