--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -25,7 +25,7 @@
     "back to main": "Вернуться на главную",
     "order sum": "Сумма заказа",
     "delivery": "Доставка",
-    "all total": "Всего",
+    "all total": "Итог + Доставка",
     "new order": "НОВЫЙ ЗАКАЗ",
     "make order": "Оформить заказ",
     "phone": "Номер Телефона",
