--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -25,6 +25,7 @@
     "back to main": "Back to the main page",
     "order sum": "Order sum",
     "delivery": "Delivery",
+    "promocode": "Promocode",
     "all total": "Total + Delivery",
     "new order": "New order",
     "make order": "Make an order",
