--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -29,6 +29,9 @@
     "new order": "НОВЫЙ ЗАКАЗ",
     "make order": "Оформить заказ",
     "phone": "Номер Телефона",
+    "promocode": "Промокод",
+    "promo_correct": "Промокод",
+    "promo_incorrect": "Неверный промокод, либо прошел срок действия.",
     "buy": "Купить",
     "more": "Еще",
     "loading": "Загрузка",
