--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -30,6 +30,7 @@
     "make order": "Оформить заказ",
     "phone": "Номер Телефона",
     "promocode": "Промокод",
+    "min_order_sum": "Минимальная сумма заказа - ",
     "promo_correct": "Промокод",
     "promo_incorrect": "Неверный промокод, либо прошел срок действия.",
     "buy": "Купить",
